# src/routes/v1.routes.js
@@ -9,6 +9,7 @@ import administrationRoutes from './administration.routes.js';
 import deviceRoutes from './device.routes.js';
 import { vehicleRoutes, driverRoutes } from './resource.routes.js';
 import devicePingRoutes from './device-ping.routes.js';
+import vehicleLocationRoutes from './vehicle-location.routes.js';
 
 const router = express.Router();
 
@@ -20,6 +21,7 @@ router.use('/master-data', masterDataRoutes);
 router.use('/history', historyRoutes);
 router.use('/devices', deviceRoutes);
 router.use('/devices', devicePingRoutes);
+router.use('/vehicles', vehicleLocationRoutes);
 router.use('/vehicles', vehicleRoutes);
 router.use('/drivers', driverRoutes);
 router.use('/', administrationRoutes);
